Trying to fix CI/CD